--- a/below_assessment_record/below_assess_record.html
+++ b/below_assessment_record/below_assess_record.html
@@ -29,7 +29,7 @@
     <div id="drawer" class="sidebar">
         <ul>
             <li><a href="#" onclick="window.print()">Print</a></li>
-            <li><a href="#"><button class="items" id="saveButton">Save</button></a></li>
+            <li><a href="#"><button class="items" id="saveButtons">Save</button></a></li>
             <li><a href="#"><button class="items" id="addedData">View Data</button></a></li>
             <li class="items"><a href="#">2 MILLION BELOW</a></li>
         </ul>
